# sematext-api-client-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish-crates.yml
docs/: AlertNotification.md  AlertNotificationRequest.md  AlertNotificationsApi.md  AlertRule.md  AlertRuleResponse.md  AlertRuleResponseEntry.md  AlertRuleScheduleTimeRangeDto.md  AlertRuleScheduleWeekdayDto.md  AlertRulesResponse.md  AlertRulesResponseEntry.md  AlertsApi.md  App.md  AppDescription.md  AppMetadata.md  AppResponse.md  AppResponseEntry.md  AppTypesResponse.md  AppTypesResponseEntry.md  AppsApi.md  AppsResponse.md  AppsResponseEntry.md  AwsSettingsControllerApi.md  BasicAuthMethodDto.md  BasicOrganizationDto.md  BillingApi.md  BillingInfo.md  ChargesDetailsResponseDto.md  CloudWatchSettings.md  CloudWatchSettingsResponse.md  CloudWatchSettingsResponseEntry.md  CreateAppInfo.md  CreateTokenDto.md  DailyDto.md  DataSeriesFilter.md  DataSeriesRequest.md  DayUsageData.md  Dimension.md  Error.md  EventDto.md  FilterValue.md  (+57 more)
src/: date_serializer.rs  lib.rs
src/apis/: alert_notifications_api.rs  alerts_api.rs  apps_api.rs  aws_settings_controller_api.rs  billing_api.rs  client.rs  configuration.rs  logs_app_api.rs  logs_usage_api_controller_api.rs  metrics_api.rs  mod.rs  monitoring_app_api.rs  request.rs  reset_password_api.rs  saved_queries_api.rs  subscriptions_api.rs  tag_api_controller_api.rs  tokens_api_controller_api.rs
src/models/: alert_notification.rs  alert_notification_request.rs  alert_rule.rs  alert_rule_response.rs  alert_rule_response_entry.rs  alert_rule_schedule_time_range_dto.rs  alert_rule_schedule_weekday_dto.rs  alert_rules_response.rs  alert_rules_response_entry.rs  app.rs  app_description.rs  app_metadata.rs  app_response.rs  app_response_entry.rs  app_types_response.rs  app_types_response_entry.rs  apps_response.rs  apps_response_entry.rs  basic_auth_method_dto.rs  basic_organization_dto.rs  billing_info.rs  charges_details_response_dto.rs  cloud_watch_settings.rs  (+61 more)
(+13 files in other folders)
