[package]
name = "stcloud"
version = "0.3.0"
authors = ["Sematext Inc"]
description = "Client package for talking to Sematext Cloud."
readme = "README.md"
repository = "https://github.com/sematext/sematext-api-client-rust"
license-file = "LICENSE"
keywords = ["monitoring", "logging", "metrics", "alerting", "sematext"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
base64 = "~0.7.0"
futures = "0.1.16"
hyper = "0.11.6"
url = "1.5"

[dev-dependencies]
tokio-core = "*"
