[package]
name = "stcloud"
version = "0.3.1"
authors = ["Sematext Inc"]
description = "Client package for talking to Sematext Cloud."
readme = "README.md"
repository = "https://github.com/sematext/sematext-api-client-rust"
license-file = "LICENSE"
keywords = ["monitoring", "logging", "metrics", "alerting", "sematext"]

[dependencies]
serde = "1.0.131"
serde_derive = "1.0.131"
serde_yaml = "0.8.23"
serde_json = "1.0.73"
base64 = "0.13.0"
futures = "0.3.17"
hyper = "0.14.16"
url = "2.2.2"

[dev-dependencies]
tokio-core = "0.1.18"
