[package]
name = "stcloud"
version = "0.5.0"
authors = ["Sematext Inc"]
description = "Client package for talking to Sematext Cloud."
readme = "README.md"
repository = "https://github.com/sematext/sematext-api-client-rust"
license-file = "LICENSE"
keywords = ["monitoring", "logging", "metrics", "alerting", "sematext"]
edition = "2021"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_yaml = "^0.8"
serde_json = "^1.0"
base64 = "^0.12"
futures = "^0.3"
hyper = { version = "^0.14", features = ["client", "http1", "tcp"] }
url = "^2"
headers = "^0.3"
tokio = { version = "^1", features = ["full"] }
bigdecimal = { version = "^0.1", features = ["serde"] }
chrono = { version = "^0.4", features = ["serde"] }
async-trait = "^0.1"

[dev-dependencies]
tokio-core = "^0.1"
tokio = { version = "^1", features = ["full"] }
